--- a/htsc/奥体资源池2.html
+++ b/htsc/奥体资源池2.html
@@ -92,6 +92,7 @@
         height: 3px;
         background-color: #000;
       }
+
       .progressBar div {
         background-color: #6dd400;
         height: 3px;
@@ -112,23 +113,29 @@
       .error {
         color: #e02020;
       }
+
       .warn {
         color: #f7b500;
       }
+
       .normal {
         color: #fff;
       }
+
       .flowGary {
         border: 1px solid #ccc;
       }
+
       .flowSelect {
         background: #72c2ff;
         border: 1px solid #44d7b6;
       }
+
       .flowActive {
         background: rgba(0, 52, 97, 0.5);
         border: 1px solid #0091ff;
       }
+
       .flowError {
         background-image: linear-gradient(
           180deg,
@@ -138,6 +145,7 @@
         );
         border: 1px solid #e02020;
       }
+
       .flowWarn {
         background-image: linear-gradient(
           180deg,
@@ -149,8 +157,8 @@
       }
     </style>
     <script src="/static/sugar/static/js/jquery.min.js"></script>
-    <!-- <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
-    <!-- <script src="./奥体资源池2.js"></script> -->
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="./奥体资源池2.js"></script>
   </head>
 
   <body>
@@ -159,10 +167,24 @@
     </div>
 
     <script>
+      function setNum(num) {
+        if ((!num && num !== 0) || num == '-') {
+          return '-';
+        } else {
+          return isNaN(Number(num)) ? '-' : (num / 1024).toFixed(2);
+        }
+      }
+      function setProgress(num, total) {
+        if (num == '-') {
+          return 0 + 'px';
+        } else {
+          return num / total >= 1 ? 96 : (num / total) * 96 + 'px';
+        }
+      }
       (function () {
         function render(param) {
           var sqlData = param.data;
-          // sqlData = testData.data || [];
+          sqlData = testData.data || [];
           $('.testDiv').empty();
 
           for (let title in sqlData) {
@@ -203,7 +225,7 @@
                     <div style="width: ${
                       cpuUtilization == '-'
                         ? '0'
-                        : (cpuUtilization / cpuUtilizationMax) * 100 + 'px'
+                        : setProgress(cpuUtilization, cpuUtilizationMax)
                     }"></div>
                   </div>
                   </div>
@@ -218,46 +240,43 @@
                       <div style="width: ${
                         memUtilization == '-'
                           ? '0'
-                          : (memUtilization / memUtilizationMax) * 100 + 'px'
+                          : setProgress(memUtilization, memUtilizationMax)
                       }"></div>
                     </div>
                   </div>
                   <div class="blockInfo">
                     <div class="numST">
                       <div>网络:</div>
-                      <div>${network}${network == '-' ? '' : 'KBps'}</div>
+                      <div>${setNum(network)}${network == '-' ? '' : 'MB'}</div>
                     </div>
                     <div class="progressBar">
                       <div style="width: ${
                         network == '-'
                           ? '0'
-                          : (network / networkMax) * 100 + 'px'
+                          : setProgress(setNum(network), networkMax)
                       }"></div>
                     </div>
                   </div>
                   <div class="blockInfo">
                     <div class="numST">
                       <div>磁盘:</div>
-                      <div>${memory1}${memory1 == '-' ? '' : 'KBps'}</div>
+                      <div>${setNum(memory1)}${memory1 == '-' ? '' : 'MB'}</div>
                     </div>
                     <div class="progressBar">
                       <div style="width: ${
                         memory1 == '-'
                           ? '0'
-                          : (memory1 / memory1Max) * 100 + 'px'
+                          : setProgress(setNum(memory1), memory1Max)
                       }"></div>
                     </div>
-                  </div>
-                  <div class="blockInfo">
+                  </div><div class="blockInfo">
                     <div class="numST">
                       <div></div>
-                      <div>${memory2}${memory2 == '-' ? '' : 'KBps'}</div>
+                      <div>${memory2}${memory2 == '-' ? '' : 'ms'}</div>
                     </div>
                     <div class="progressBar">
                       <div style="width: ${
-                        memory2 == '-'
-                          ? '0'
-                          : (memory2 / memory2Max) * 100 + 'px'
+                        memory2 == '-' ? '0' : setProgress(memory2, memory2Max)
                       }"></div>
                     </div>
                   </div>`;
@@ -289,14 +308,13 @@
               </div>`;
             $('.testDiv').append(domStr);
           }
-          $('.flowDiv').on('click', function (params) {
+          $('.flow').on('click', function (params) {
             // params.stopPropagation();
             window.parent.postMessage(
               {
                 sugarUrl: window.location.href,
-                // sugarData: params.currentTarget.children[1].innerHTML, // 自定义图表传递给下钻或联动图表的参数
                 sugarData: {
-                  endpoint:
+                  param:
                     params.currentTarget.children[1].innerHTML.split(':')[1]
                 },
                 isDD: true // 自定义图表触发下钻和联动的关键字(触发下钻和联动功能的必填字段-不可删除)
