--- a/babel/index.html
+++ b/babel/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <button id="btn">btn111111</button>
+    <script src="./dist.js"></script>
   </body>
 </html>
